2005-03-11  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/topdocs/NEWS.tely (Top): Fix text example.

2005-03-11  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* VERSION (PACKAGE_NAME): release 2.5.15

	* scm/output-{pdf,pdftex,sketch}.scm (Module): remove bitrotted files.

	* scm/framework-svg.scm (output-framework): put scaling in
	document header. Apply scaling only once.
	(output-framework): dump page size in px, not mm. 

	* scm/lily-library.scm (modified-font-metric-font-scaling): rename
	from font-size.

	* lily/paper-outputter-scheme.cc (LY_DEFINE):
	ly:outputter-output-scheme, new function.

	* scm/output-svg.scm (pango-description-to-svg-font): new function

2005-03-10  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/GNUmakefile (deep-symlinks): remove outimages
	target.

	* input/typography-demo.ly: new file.

2005-03-10  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/global.itely (File structure): Add markup blocks
	to toplevel expressions.
	(Multiple movements, Creating titles): Add markup blocks.

	* lily/stencil-scheme.cc: Use "libc-extention.hh" (WAS:
	<libc-extention.hh>).

	* lily/accidental.cc (accurate_boxes): Compile fix: 1.51 was broken.

	* flower
	* lily
	* kpath-guile: Nitpick run: buildscripts/fixcc.py.

2005-03-10  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/accidental.cc: special bboxes for natural. 

	* mf/feta-toevallig.mf: make stems heavier.

	* lily/dynamic-text-spanner.cc (print): add bound padding for edge
	texts as well.

	* mf/feta-klef.mf: revise. 

	* mf/feta-schrift.mf: make thinning of accent less pronounced.

	* mf/feta-klef.mf: add rounded curve at top. 
	make thinnib a little heavier.

2005-03-10  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/parser.yy (book_body): Oops, allow \markup in \book too.

	* buildscripts/fixcc.py: New file.

	* input/regression/utf8.ly: Update Debian font description.

2005-03-09  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/aclocal.m4: Fix test.
